--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
-body {
-    font-family: 'Cinzel Decorative', cursive;
+nav {
+    font-family: 'DejaVu Sans', sans-serif;
+    line-height: 4em;
+    font-weight: bold;
+    padding: 1em;
+    margin: 1em;
+    border: 2px dotted black;
+    border-radius: 6px;
+    background-color: lightyellow;
 }
 
 article {
+    font-family: 'Cinzel Decorative', cursive;
     padding: 2em;
     margin: 1em;
     border: 2px solid black;
@@ -10,56 +18,67 @@ article {
     background-color: azure;
 }
 
-footer{
+footer {
     padding: 2em;
-    margin: 1em;
+    margin: 2em 1em 1em 1em;
     border: 2px solid black;
     border-radius: 6px;
     background-color: gainsboro;
-    margin-top: 2em;
 }
 
-h1 {
-    font-family: "monospace";
+.page-title {
+    font-family: 'Cinzel', serif;
     text-align: center;
 }
 
-h2{
-    font-family: "monospace";
+.chapter-title {
+    font-family: 'Cinzel', serif;
 }
 
-@media (min-width: 640px) {
-    section{
+@media (min-width: 420px) {
+    .page {
         display: grid;
         grid-gap: 1em;
-        grid-template-columns: repeat(2, 3fr);
+        grid-template-columns: 1fr 2fr;
         grid-auto-rows: minmax(50px, auto);
     }
-}
 
-footer{
-    grid-column: 1/-1;
-}
-
-header{
-    grid-column: 1/-1;
-}
-
-h2{
-    grid-column: 1/-1;
-    margin-left: 3em;
-}
-
-#row6{
-    grid-row:6;
-}
-
-@media (min-width: 1140px){
-    section{
-        grid-template-columns: repeat(3, 3fr);
+    header {
+        grid-column: 1/-1;
     }
 
-    h1{
-        grid-column: 2/-1;
+    nav {
+        grid-row: 2 / 8;
+        padding: 2em 0.2em 0.2em 1em;
+    }
+
+    footer {
+        grid-column: 1/-1;
+    }
+
+    .chapter-title {
+        grid-column-start: 2;
+        margin-left: 3em;
+    }
+}
+
+@media (min-width: 800px) {
+    .page {
+        grid-template-columns: 1fr 2fr 2fr;
+    }
+    
+    nav {
+        grid-row: 2 / 6;
+    }
+}
+
+
+@media (min-width: 1140px) {
+    .page {
+        grid-template-columns: 1fr 2fr 2fr 2fr;
+    }
+
+    nav {
+        grid-row: 2 / 5;
     }
 }
